--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "nestjs-telegraf": "^2.9.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "telegraf": "^4.16.3"
+    "telegraf": "^4.16.3",
+    "telegraf-session-local": "^2.1.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
