--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "nestjs-telegraf": "^2.9.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "sharp": "^0.34.2",
     "telegraf": "^4.16.3",
     "telegraf-session-local": "^2.1.1"
   },
